samples/_failures_safe/1761342533_a8fb7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_234f53d2.c: In function ‘main’:
./samples/SAFE/__tmp_234f53d2.c:154:9: error: expected declaration or statement at end of input
  154 |         size_t len = strlen(input_buffer);
      |         ^~~~~~
./samples/SAFE/__tmp_234f53d2.c:154:9: error: expected declaration or statement at end of input
